# kanagawa

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  NOTICE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-compiler.yml  build-devcontainer-template.yml  build-targets-template.yml  chkdoc-test.yml  compiler-test.yml  interface-test.yml  library-test.yml  logic-test-1.yml  logic-test-2.yml  logic-test.yml  nightly-prerelease.yml  publish-libdoc.yml  release.yml  riscv-test.yml  runtime-rtl-test.yml  sandcastle-test.yml  syntax-test.yml
compiler/: CMakeLists.txt  kanagawa.cabal
compiler/cpp/: CMakeLists.txt  backend_common.cpp  backend_common.h  branch_and_bound.cpp  branch_and_bound.h  circt_util.cpp  circt_util.h  compiler.cpp  compiler.h  conditional_local_updates.cpp  conditional_local_updates.h  config.cpp  config.h  control_flow_graph.cpp  control_flow_graph.h  data_flow_work_list.cpp  data_flow_work_list.h  debug_symbols.cpp  debug_symbols.h  deep_ptr.h  device_config_visitor.cpp  device_config_visitor.h  dgml.cpp  dgml.h  enumerate_function_instances.cpp  enumerate_function_instances.h  errors.h  internal_tests.cpp  internal_tests.h  ir.cpp  ir.h  json_value.h  json_writer.h  kanagawa.cpp  local_data_propagation.cpp  local_data_propagation.h  lower.cpp  object_path.cpp  object_path.h  optimize.cpp  (+31 more)
compiler/hs/: CMakeLists.txt  kanagawa.cabal
compiler/hs/app/: Main.hs  Options.hs  ParseTree.hs  ReleaseVersion.hs
compiler/hs/app/Options/: CmdArgs.hs  FFI.hsc
compiler/hs/app/ParseTree/: FFI.hs  Types.hsc
compiler/hs/lib/Language/Kanagawa/: Closure.hs  Constexpr.hs  Desugar.hs  Error.hs  Frontend.hs  Function.hs  Internal.hs  Mangle.hs  Parser.hs  PrettyPrint.hs  Recursion.hs  Symbols.hs  Template.hs  Type.hs  TypeCheck.hs  Warning.hs
compiler/hs/lib/Language/Kanagawa/Parser/: IO.hs  Lexer.hs  Options.hs  Pattern.hs  SymbolTable.hs  Syntax.hs
compiler/hs/lib/Language/Kanagawa/Parser/Syntax/: FixPattern.hs  Pattern.hs  TH.hs
compiler/hs/lib/Language/Kanagawa/Type/: Inference.hs
doc/: compiler-design-reference.md  effective-kanagawa.md  mapping-to-hardware.md  programming-guide.md  sandcastle.md
library-docs/base/: system.html
library-docs/codec/: crc.html
library-docs/compiler/: config.html  hal.html  options.html
library-docs/control/: async.html  fsm.html  loop.html  wait.html
library-docs/data/: array.html  bitarray.html  bits.html  buffer.html  closure.html  counter.html  datetime.html  fifo.html  function.html  hash_table.html  memory.html  optional.html  order.html  representation.html  string.html  tuple.html  vector.html
library-docs/debug/: print.html  sim_assert.html
library-docs/hardware/: config.html  dsp.html
library-docs/intel/: config.html
library-docs/numeric/: complex.html  fixed.html  float32.html  float64.html  int.html
library-docs/processor/: risc_v.html
library-docs/sync/: atomic.html  lock.html
library-docs/test/: unit.html
library-docs/type/: coerce.html  cstddef.html  cstdint.html  newtype.html  stdtype.html
library-docs/xilinx/: config.html
runtime/rtl/: arbitration_chain.sv  context_saver.sv  cross_region_fifo.sv  cycle_counter.sv  extern_return_router.sv  fifo_debug.sv  fifo_ptrs.sv  fifo_ptrs_ex.sv  files.f  fixed_delay_fifo.sv  flip_flop_chains.sv  full_empty_counter.sv  functions.sv  internal_buffer_fifo.sv  lfsr.sv  logic_ram.sv  loop_generator.sv  mem_init_ctrl.sv  memory_bypass.sv  one_register_fifo.sv  pre_fifo_delay.sv  race_counter.sv  register_fifo.sv  register_fifo_dual.sv  register_fifo_skid.sv  reorder_buffer.sv  reset_control.sv  semaphore.sv  show_ahead_register_fifo.sv  skid_buffer.sv  skid_fifo_read_buffer.sv  sync_ram.sv  sync_ram_with_error.sv  thread_counter.sv  two_register_fifo.sv  types.sv  unknown_reset.sv  write_delay_fifo.sv
test/: CMakeLists.txt
test/compiler/: CMakeLists.txt  main.cpp  typealias_test.k
test/interface/: CMakeLists.txt  another_exported_class.k  another_exported_class.sv  ecc_mem.k  ecc_mem.sv  export_class_no_instances.k  export_class_test_cases_1.k  export_class_test_cases_2.k  export_class_test_cases_3.k  exported_class_method_template.k  exported_class_method_template.sv  external_class.k  external_class.sv  external_class_template.k  is_last_exported_class.k  is_last_exported_class.sv  nested_export_class.k  protocol_attributes_class.k  protocol_attributes_class.sv  scheduling_test_cases.k  scheduling_test_cases.sv  simple_exported_class.k  simple_exported_class.sv  times_five_contained_class.k  times_five_contained_class.sv
test/logic/: CMakeLists.txt  array_test_cases.k  atomic_do.k  auto_inline.k  bit_constant_prop_test_cases.k  call_arbiter.k  callback_test_cases.k  circt_test_cases_1.k  common_subexpression.k  compare_operand_width.k  concat.k  conditional_update.k  const.k  context_saver_depth.k  context_saver_full.k  data_prop_test_cases.k  decompose_sub.k  designated_initializer.k  device_memory_tests.k  dsp_test_cases.k  fifo_depth.k  function_call.k  gft_constant_prop_repro.k  (+75 more)
tools/: CMakeLists.txt
tools/chkdoc/: CMakeLists.txt  chkdoc.cpp
tools/chkdoc/contexts/: emptyfile.k  emptyfunction.k
tools/sandcastle/: .gitignore  CMakeLists.txt  cabal.project  cgmanifest.json  sandcastle.cabal
tools/sandcastle/app/: Main.hs
tools/sandcastle/dist-newstyle/cache/: compiler  config
tools/sandcastle/lib/: Sandcastle.hs
tools/sandcastle/lib/Sandcastle/: Cli.hs  Css.hs  DocGen.hs  Monad.hs  Tree.hs
tools/sandcastle/test/: test.hs
tools/sandcastle/test/golden/: index.md
tools/sandcastle/test/golden/sample/: alias.md  callbacks.md  decls.md  examples.md  links.md  self_exposed.md  template_instance.md
tools/sandcastle/test/golden/sample/a/b/: c.md
tools/sandcastle/test/golden/sample/decls/: initializer.md
tools/sandcastle/test/sample/: alias.k  callbacks.k  decls.k  examples.k  links.k  self_exposed.k  template_instance.k
tools/sandcastle/test/sample/a/b/: c.k
tools/sandcastle/test/sample/decls/: initializer.k
(+330 files in other folders)
